--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,18 +1,18 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="../css/stylesheet.css" >
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-    <title>Contact</title>
+   <!-- These meta tags are required to ensure the website displays correctly -->
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+   
+   <!-- Bootstrap below. Our css is below as its a higher priority than bootstrap. -->
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+   <link rel="stylesheet" href="../css/stylesheet.css" >
+    <title>La Collina - Contact</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Restaurant Html Project</a>
+    <nav class="navbar navbar-expand-lg navbar-light ">
+        <a class="navbar-brand" href="#">La Collina</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -34,9 +34,30 @@
           </ul>
         </div>
       </nav>
-    <h1>Contact us!</h1>
+    <h1>Have a query? Want to leave a review or feedback?</h1>
+    <p>You can fill out the form below for us to receive your feedback.</p>
+    <form id="formtochange" class="form">
+      <div class="row">
+        <div class="col">
+          <input type="text" class="form-control" placeholder="Name">
+        </div>
+        <div class="col">
+          <input type="text" class="form-control" placeholder="Email">
+        </div>
+      </div>
+      <div class="form-group"><br>
+        <textarea class="form-control" placeholder="We'd love to hear from you." id="textarea" rows="3"></textarea>
+      </div>
+      <button onclick="submitted()" type="submit" class="btn btn-primary">Submit</button>
+    </form>
+    
 
     <!-- Optional JavaScript -->
+    <script>
+      function submitted() {
+        document.getElementById("formtochange").innerHTML="<h1>Thank you for your feedback.</h1>";
+      } 
+      </script> 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
