--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -1,18 +1,19 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
+    <!-- These meta tags are required to ensure the website displays correctly -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="../css/stylesheet.css" >
-    <!-- Bootstrap CSS -->
+    
+    <!-- Bootstrap below. Our css is below as its a higher priority than bootstrap. -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-    <title>Reviews</title>
+    <link rel="stylesheet" href="../css/stylesheet.css" >
+    <title>La Collina - Reviews</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Restaurant Html Project</a>
+    <!-- The code below is to show the navigation bar that is used between all of the html files in the project -->
+    <nav class="navbar navbar-expand-lg navbar-light ">
+        <a class="navbar-brand" href="#">La Collina</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -23,7 +24,7 @@
                 <a class="nav-link" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="reviews.html">Menu</a>
+              <a class="nav-link" href="menu.html">Menu</a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="#">Reviews<span class="sr-only">(current)</span></a>
@@ -35,7 +36,13 @@
         </div>
       </nav>
     <h1>Reviews!</h1>
-
+    <p>
+      As a restaurant in Galway, we understand there is many places you can dine. Why don't you listen to some of our customers who will show you why La Collina is the place to eat tonight!<br><br>
+    </p>
+    <div class="review1">
+      <h3>John Smith</h3>
+      <p>"Just Wow, the dinner I had here was something spectacular. The staff were so friendly and the food arrived very quickly. Was very impressed and you can expect to see me in there again to try something else off the a la carte menu!"</p>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
