--- a/pages/menu.html
+++ b/pages/menu.html
@@ -13,8 +13,9 @@
     <title>La Collina - Menu</title>
   </head>
   <body>
+  <div class="wrapper">
     <nav class="navbar navbar-expand-lg navbar-light ">
-        <a class="navbar-brand" href="#">La Collina</a>
+        <a style="color: white;" class="navbar-brand" href="#">La Collina</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,33 +23,31 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="../index.html">Home</a>
+                <a style="color: white;" class="nav-link" href="../index.html">Home</a>
             </li>
             <li class="nav-item active">
               
-              <a class="nav-link" href="#">Menu<span class="sr-only">(current)</span></a>
+              <a style="color:rgb(192, 192, 192);" class="nav-link" href="#">Menu<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="reviews.html">Reviews</a>
+              <a style="color: white;" class="nav-link" href="reviews.html">Reviews</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a style="color: white;" class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
       </nav>
-    <h1 align="center">Antipasti/Starters!</h1>
-    <ul>
-      
-    </ul>
+      <hr>
     <section id="menu" class="menu">
+      <h1 align="center">Antipasti/Starters!</h1>
       <div class="container">
 
         <div class="row menu-container" style="position: relative; height: 375px;">
 
           <div style="position: absolute; left: 0px; top: 0px;">
             <div class="menu-content">
-              <a href="#">Bruschetta ai Funghi Restaurant</a><span>$5.95</span>
+              <a href="#">Bruschetta ai Funghi Restaurant</a><span>€5.95</span>
             </div>
             <div class="menu-ingredients">
               Pizza bread style, topped with chopped tomatoes, garlic, basil & olive oil
@@ -57,7 +56,7 @@
 
           <div style="position: absolute; left: 660px; top: 0px;">
             <div class="menu-content">
-              <a href="#">Bruschetta al pomodoro</a><span>$6.95</span>
+              <a href="#">Bruschetta al pomodoro</a><span>€6.95</span>
             </div>
             <div class="menu-ingredients">
               Pizza bread style, topped with chopped tomatoes, garlic, basil & olive oil
@@ -66,7 +65,7 @@
 
           <div style="position: absolute; left: 0px; top: 75px;">
             <div class="menu-content">
-              <a href="#">Crocchette di patate (Italian croquettes)</a><span>$7.95</span>
+              <a href="#">Crocchette di patate (Italian croquettes)</a><span>€7.95</span>
             </div>
             <div class="menu-ingredients">
               Riced potatoes, combined with sundried tomato pesto, bacon and mozzarella
@@ -75,7 +74,7 @@
 
           <div style="position: absolute; left: 660px; top: 75px;">
             <div class="menu-content">
-              <a href="#">Garlic bread Restaurant</a></a><span>$8.95</span>
+              <a href="#">Garlic bread Restaurant</a></a><span>€8.95</span>
             </div>
             <div class="menu-ingredients">
               Pizza bread style topped with garlic butter
@@ -84,7 +83,7 @@
 
           <div style="position: absolute; left: 0px; top: 150px;">
             <div class="menu-content">
-              <a href="#">Polpette di Carne (Italian Meatballs)</a><span>$9.95</span>
+              <a href="#">Polpette di Carne (Italian Meatballs)</a><span>€9.95</span>
             </div>
             <div class="menu-ingredients">
               Homemade meatballs,slow cooked in fresh tomato sauce,served with toasted ciabatta
@@ -93,7 +92,7 @@
 
           <div style="position: absolute; left: 660px; top: 150px;">
             <div class="menu-content">
-              <a href="#">Burrata salad</a><span>$4.95</span>
+              <a href="#">Burrata salad</a><span>€4.95</span>
             </div>
             <div class="menu-ingredients">
               Basil pesto, cherry tomatoes on toasted bread, fresh burrata, honey & mixed nuts
@@ -102,7 +101,7 @@
 
           <div style="position: absolute; left: 0px; top: 225px;">
             <div class="menu-content">
-              <a href="#">Greek Salad</a><span>$9.95</span>
+              <a href="#">Greek Salad</a><span>€9.95</span>
             </div>
             <div class="menu-ingredients">
               Fresh spinach, crisp romaine, tomatoes, and Greek olives
@@ -111,7 +110,7 @@
 
           <div style="position: absolute; left: 660px; top: 225px;">
             <div class="menu-content">
-              <a href="#">Spinach Salad</a><span>$9.95</span>
+              <a href="#">Spinach Salad</a><span>€9.95</span>
             </div>
             <div class="menu-ingredients">
               Fresh spinach with mushrooms, hard boiled egg, and warm bacon vinaigrette
@@ -120,7 +119,7 @@
 
           <div style="position: absolute; left: 0px; top: 300px;">
             <div class="menu-content">
-              <a href="#">Piadina di Pollo</a><span>$12.95</span>
+              <a href="#">Piadina di Pollo</a><span>€12.95</span>
             </div>
             <div class="menu-ingredients">
               A thin Italian wrap with red slaw, sweetcorn, crispy bacon & chicken served with a sweet chili mayonnaise
@@ -142,7 +141,7 @@
 
           <div style="position: absolute; left: 0px; top: 0px;">
             <div class="menu-content">
-              <a href="#">Penne al Pesto calabrese Restaurant</a><span>$16.95</span>
+              <a href="#">Penne al Pesto calabrese Restaurant</a><span>€16.95</span>
             </div>
             <div class="menu-ingredients">
               Diced chicken, spring onion, broccoli & mix chilli in a red & green pesto cream sauce
@@ -151,7 +150,7 @@
 
           <div style="position: absolute; left: 660px; top: 0px;">
             <div class="menu-content">
-              <a href="#">Linguine alla Carbonara Restaurant</a><span>$15.95</span>
+              <a href="#">Linguine alla Carbonara Restaurant</a><span>€15.95</span>
             </div>
             <div class="menu-ingredients">
               Pan fried smoked bacon ,egg yolk, parmesan cream sauce
@@ -160,7 +159,7 @@
 
           <div style="position: absolute; left: 0px; top: 75px;">
             <div class="menu-content">
-              <a href="#">Tagliatelle Tommaso Restaurant</a><span>$14.95</span>
+              <a href="#">Tagliatelle Tommaso Restaurant</a><span>€14.95</span>
             </div>
             <div class="menu-ingredients">
               Chicken and mushrooms in a parmesan cream sauce
@@ -169,7 +168,7 @@
 
           <div style="position: absolute; left: 660px; top: 75px;">
             <div class="menu-content">
-              <a href="#">Linguine alla Bolognese Restaurant</a></a><span>$17.95</span>
+              <a href="#">Linguine alla Bolognese Restaurant</a></a><span>€17.95</span>
             </div>
             <div class="menu-ingredients">
               Homemade traditional Bolognese sauce
@@ -178,7 +177,7 @@
 
           <div style="position: absolute; left: 0px; top: 150px;">
             <div class="menu-content">
-              <a href="#">Penne all'arrabbiata Restaurant</a><span>$15.95</span>
+              <a href="#">Penne all'arrabbiata Restaurant</a><span>€15.95</span>
             </div>
             <div class="menu-ingredients">
               Penne pasta with fresh red and green chillies in tomato sauce
@@ -187,7 +186,7 @@
 
           <div style="position: absolute; left: 660px; top: 150px;">
             <div class="menu-content">
-              <a href="#">Risotto con funghi e burrata Restaurant</a><span>$15.95</span>
+              <a href="#">Risotto con funghi e burrata Restaurant</a><span>€15.95</span>
             </div>
             <div class="menu-ingredients">
               Cannoli rice, wild mushroom, spinach in creamy and parmesan sauce 
@@ -196,7 +195,7 @@
 
           <div style="position: absolute; left: 0px; top: 225px;">
             <div class="menu-content">
-              <a href="#">Lasagne Restaurant</a><span>$14.95</span>
+              <a href="#">Lasagne Restaurant</a><span>€14.95</span>
             </div>
             <div class="menu-ingredients">
               Traditional homemade lasagne, served with chips
@@ -218,7 +217,7 @@
 
           <div style="position: absolute; left: 0px; top: 0px;">
             <div class="menu-content">
-              <a href="#">Margherita Restaurant</a><span>$16.95</span>
+              <a href="#">Margherita Restaurant</a><span>€16.95</span>
             </div>
             <div class="menu-ingredients">
               Tomato sauce and mozzarella cheese. Also available with Buffalo Mozzarella (+€2,00)
@@ -227,7 +226,7 @@
 
           <div style="position: absolute; left: 660px; top: 0px;">
             <div class="menu-content">
-              <a href="#">Pepperoni Restaurant</a><span>$15.95</span>
+              <a href="#">Pepperoni Restaurant</a><span>€15.95</span>
             </div>
             <div class="menu-ingredients">
               Tomato sauce, mozzarella, pepperoni
@@ -236,7 +235,7 @@
 
           <div style="position: absolute; left: 0px; top: 75px;">
             <div class="menu-content">
-              <a href="#">Isabella Restaurant</a><span>$14.95</span>
+              <a href="#">Isabella Restaurant</a><span>€14.95</span>
             </div>
             <div class="menu-ingredients">
               Tomato sauce, mozzarella, ham and mushrooms
@@ -245,7 +244,7 @@
 
           <div style="position: absolute; left: 660px; top: 75px;">
             <div class="menu-content">
-              <a href="#">Diavola Restaurant</a></a><span>$17.95</span>
+              <a href="#">Diavola Restaurant</a></a><span>€17.95</span>
             </div>
             <div class="menu-ingredients">
               Tomato sauce, mozzarella, spicy salame, red onion & nduja
@@ -254,7 +253,7 @@
 
           <div style="position: absolute; left: 0px; top: 150px;">
             <div class="menu-content">
-              <a href="#">Toscana Restaurant</a><span>$15.95</span>
+              <a href="#">Toscana Restaurant</a><span>€15.95</span>
             </div>
             <div class="menu-ingredients">
               Tomato sauce, fior di latte, portobello mushrooms, Italian sausage, rosemary
@@ -263,7 +262,7 @@
 
           <div style="position: absolute; left: 660px; top: 150px;">
             <div class="menu-content">
-              <a href="#">Rucola Parma Emiliana Restaurant</a><span>$15.95</span>
+              <a href="#">Rucola Parma Emiliana Restaurant</a><span>€15.95</span>
             </div>
             <div class="menu-ingredients">
               Tomato sauce, mozzarella, rocket leaves, parma ham & parmesan
@@ -272,7 +271,7 @@
 
           <div style="position: absolute; left: 0px; top: 225px;">
             <div class="menu-content">
-              <a href="#">Hawaiian Restaurant</a><span>$14.95</span>
+              <a href="#">Hawaiian Restaurant</a><span>€14.95</span>
             </div>
             <div class="menu-ingredients">
               Tomato sauce, mozzarella, pineapple and cooked ham
@@ -290,5 +289,6 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </div>
   </body>
 </html>
