--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <title>La Collina - Home</title>
   </head>
   <body>
+  <div class="wrapper">
     <nav class="navbar navbar-expand-lg navbar-light ">
-      <a class="navbar-brand" href="#">La Collina</a>
+      <a style="color:white;" class="navbar-brand" href="#">La Collina</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -20,26 +21,101 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+            <a style="color:rgb(192, 192, 192);" class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/menu.html">Menu</a>
+            <a style="color:white;" class="nav-link" href="./pages/menu.html">Menu</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/reviews.html">Reviews</a>
+            <a style="color:white;" class="nav-link" href="./pages/reviews.html">Reviews</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/contact.html">Contact</a>
+            <a style="color:white;" class="nav-link" href="./pages/contact.html">Contact</a>
           </li>
         </ul>
       </div>
     </nav>
-    <h1>La Collina</h1>
+    <hr>
+    <div class="frontpage">
+      <h1>La Collina</h1>
+      <p>Welcome to the website of our fine Galway restaurant, here you can find our menu, a page to contact us and some reviews from customers.
+        View a gallery of dishes below if you would like.
+      </p>
+      <table>
+        <tr class="header">
+          <th class="header">Branches</th>
+          <th class="header">Address</th>
+          <th class="header">Phone Number</th>
+        </tr>
+        <tr>
+          <td>Salthill, Galway</td>
+          <td>N92 D64X</td>
+          <td>+085 123 4567</td>
+        </tr>
+        <tr>
+          <td>Eyre Square, Galway</td>
+          <td>N92 D65X</td>
+          <td>+085 234 5678</td>
+        </tr>
+        <tr>
+          <td>Mullingar, Co. Westmeath</td>
+          <td>N92 D66X</td>
+          <td>+085 345 6789</td>
+        </tr>
+      </table> 
+    </div>
+    <br><br>
+  
+    <!-- Gallery -->
+    <div class="row">
+      <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+        <img
+          src="images/dish1.jpg"
+          class="w-100 shadow-1-strong rounded mb-4"
+          alt="Boat on Calm Water"
+        />
+
+        <img
+          src="images/dish2.jpg"
+          class="w-100 shadow-1-strong rounded mb-4"
+          alt="Wintry Mountain Landscape"
+        />
+      </div>
+
+      <div class="col-lg-4 mb-4 mb-lg-0">
+        <img
+          src="images/Dining.jpg"
+          class="w-100 shadow-1-strong rounded mb-4"
+          alt="Mountains in the Clouds"
+        />
+
+        <img
+          src="images/dish3.jpg"
+          class="w-100 shadow-1-strong rounded mb-4"
+          alt="Boat on Calm Water"
+        />
+      </div>
+
+      <div class="col-lg-4 mb-4 mb-lg-0">
+        <img
+          src="images/dish4.webp"
+          class="w-100 shadow-1-strong rounded mb-4"
+          alt="Waves at Sea"
+        />
+
+        <img
+          src="images/Dishes.jpg"
+          class="w-100 shadow-1-strong rounded mb-4"
+          alt="Yosemite National Park"
+        />
+      </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </div>
   </body>
 </html>
