--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,8 +11,9 @@
     <title>La Collina - Contact</title>
   </head>
   <body>
+  <div class="wrapper">
     <nav class="navbar navbar-expand-lg navbar-light ">
-        <a class="navbar-brand" href="#">La Collina</a>
+        <a style="color: white;" class="navbar-brand" href="#">La Collina</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -20,47 +21,52 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="../index.html">Home</a>
+                <a style="color: white;" class="nav-link" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="menu.html">Menu</a>
+              <a style="color: white;" class="nav-link" href="menu.html">Menu</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="reviews.html">Reviews</a>
+              <a style="color: white;" class="nav-link" href="reviews.html">Reviews</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#">Contact<span class="sr-only">(current)</span></a>
+              <a style="color:rgb(192, 192, 192);" class="nav-link" href="#">Contact<span class="sr-only">(current)</span></a>
             </li>
           </ul>
         </div>
       </nav>
+    <hr>
+    <div class="frontpage" style="height: 100vh;">
     <h1>Have a query? Want to leave a review or feedback?</h1>
     <p>You can fill out the form below for us to receive your feedback.</p>
-    <form id="formtochange" class="form">
-      <div class="row">
-        <div class="col">
-          <input type="text" class="form-control" placeholder="Name">
+    </div>
+    <span class="centered">
+      <form id="formtochange" class="form">
+        <div class="row">
+          <div class="col">
+            <input type="text" class="form-control" placeholder="Name">
+          </div>
+          <div class="col">
+            <input type="text" class="form-control" placeholder="Email">
+          </div>
         </div>
-        <div class="col">
-          <input type="text" class="form-control" placeholder="Email">
+        <div class="form-group"><br>
+          <textarea class="form-control" placeholder="We'd love to hear from you." id="textarea" rows="3"></textarea>
         </div>
-      </div>
-      <div class="form-group"><br>
-        <textarea class="form-control" placeholder="We'd love to hear from you." id="textarea" rows="3"></textarea>
-      </div>
-      <button onclick="submitted()" type="submit" class="btn btn-primary">Submit</button>
-    </form>
-    
+        <button onclick="submitted()" type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    </span>
 
     <!-- Optional JavaScript -->
     <script>
       function submitted() {
-        document.getElementById("formtochange").innerHTML="<h1>Thank you for your feedback.</h1>";
+        document.getElementById("formtochange").innerHTML="<br><br><h1 style= text-align:center; >Thank you for your feedback.</h1><br><h1 style=text-align:center;>We look forward to hearing from you.</h1>";
       } 
       </script> 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  </div>
   </body>
 </html>
