--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -11,9 +11,10 @@
     <title>La Collina - Reviews</title>
   </head>
   <body>
+  <div class="wrapper" style="height: 100vh;">
     <!-- The code below is to show the navigation bar that is used between all of the html files in the project -->
     <nav class="navbar navbar-expand-lg navbar-light ">
-        <a class="navbar-brand" href="#">La Collina</a>
+        <a style="color: white;" class="navbar-brand" href="#">La Collina</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,32 +22,42 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="../index.html">Home</a>
+                <a style="color: white;" class="nav-link" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="menu.html">Menu</a>
+              <a style="color: white;" class="nav-link" href="menu.html">Menu</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#">Reviews<span class="sr-only">(current)</span></a>
+              <a style="color:rgb(192, 192, 192);" class="nav-link" href="#">Reviews<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a style="color: white;" class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
       </nav>
+    <hr>
+    <div class="frontpage">
     <h1>Reviews!</h1>
     <p>
       As a restaurant in Galway, we understand there is many places you can dine. Why don't you listen to some of our customers who will show you why La Collina is the place to eat tonight!<br><br>
     </p>
+    </div>
     <div class="review1">
       <h3>John Smith</h3>
       <p>"Just Wow, the dinner I had here was something spectacular. The staff were so friendly and the food arrived very quickly. Was very impressed and you can expect to see me in there again to try something else off the a la carte menu!"</p>
+    </div>
+    <br><br>
+    <div class="review2">
+      <h3>Jane Doe</h3>
+      <p>"The pizza here is something else. I was greeted with overall very friendly staff and the atmosphere is brilliant. I was surprised that such a popular establishment had affordable pricing and ample room."</p>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  
+  </div>
   </body>
 </html>
