Update to index

--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
         </tr>
         <tr>
           <td>Salthill, Galway</td>
-          <td>N92 D64X</td>
+          <td>H92 YC4X</td>
           <td>+085 123 4567</td>
         </tr>
         <tr>
-          <td>Eyre Square, Galway</td>
+          <td>Athlone, Co. Westmeath</td>
           <td>N92 D65X</td>
           <td>+085 234 5678</td>
         </tr>
         <tr>
           <td>Mullingar, Co. Westmeath</td>
-          <td>N92 D66X</td>
+          <td>N37 H6K5</td>
           <td>+085 345 6789</td>
         </tr>
       </table> 
