--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    
    <!-- Bootstrap below. Our css is below as its a higher priority than bootstrap. -->
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-   <link rel="stylesheet" href="css/stylesheet.css" >
+   <link rel="stylesheet" href="css/stylesheet.css">
     <title>La Collina - Home</title>
   </head>
   <body>
@@ -21,16 +21,16 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a style="color:rgb(192, 192, 192);" class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a style="color:white;" class="nav-link" href="./pages/menu.html">Menu</a>
+            <a class="nav-link" href="./pages/menu.html">Menu</a>
           </li>
           <li class="nav-item">
-            <a style="color:white;" class="nav-link" href="./pages/reviews.html">Reviews</a>
+            <a class="nav-link" href="./pages/reviews.html">Reviews</a>
           </li>
           <li class="nav-item">
-            <a style="color:white;" class="nav-link" href="./pages/contact.html">Contact</a>
+            <a class="nav-link" href="./pages/contact.html">Contact</a>
           </li>
         </ul>
       </div>
