--- a/pages/menu.html
+++ b/pages/menu.html
@@ -23,17 +23,17 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a style="color: white;" class="nav-link" href="../index.html">Home</a>
+                <a class="nav-link" href="../index.html">Home</a>
             </li>
             <li class="nav-item active">
               
-              <a style="color:rgb(192, 192, 192);" class="nav-link" href="#">Menu<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#">Menu<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a style="color: white;" class="nav-link" href="reviews.html">Reviews</a>
+              <a class="nav-link" href="reviews.html">Reviews</a>
             </li>
             <li class="nav-item">
-                <a style="color: white;" class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
