--- a/index.html
+++ b/index.html
@@ -35,79 +35,81 @@
         </ul>
       </div>
     </nav>
-    <hr>
-    <div class="frontpage">
-      <h1>La Collina</h1>
-      <p>Welcome to the website of our fine Galway restaurant, here you can find our menu, a page to contact us and some reviews from customers.
-        View a gallery of dishes below if you would like.
-      </p>
-      <table>
-        <tr class="header">
-          <th class="header">Branches</th>
-          <th class="header">Address</th>
-          <th class="header">Phone Number</th>
-        </tr>
-        <tr>
-          <td>Salthill, Galway</td>
-          <td>H92 YC4X</td>
-          <td>+085 123 4567</td>
-        </tr>
-        <tr>
-          <td>Athlone, Co. Westmeath</td>
-          <td>N92 D65X</td>
-          <td>+085 234 5678</td>
-        </tr>
-        <tr>
-          <td>Mullingar, Co. Westmeath</td>
-          <td>N37 H6K5</td>
-          <td>+085 345 6789</td>
-        </tr>
-      </table> 
-    </div>
-    <br><br>
-  
-    <!-- Gallery -->
-    <div class="row">
-      <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-        <img
-          src="images/dish1.jpg"
-          class="w-100 shadow-1-strong rounded mb-4"
-          alt="Boat on Calm Water"
-        />
-
-        <img
-          src="images/dish2.jpg"
-          class="w-100 shadow-1-strong rounded mb-4"
-          alt="Wintry Mountain Landscape"
-        />
+    <div class="content py-3 px-lg-5 px-md-0">
+      <div class="frontpage">
+        <h1>La Collina</h1>
+        <p>Welcome to the website of our fine Galway restaurant, here you can find our menu, a page to contact us and some reviews from customers.
+          View a gallery of dishes below if you would like.
+        </p>
+        <table>
+          <tr class="header">
+            <th class="header">Branches</th>
+            <th class="header">Address</th>
+            <th class="header">Phone Number</th>
+          </tr>
+          <tr>
+            <td>Salthill, Galway</td>
+            <td>H92 YC4X</td>
+            <td>+085 123 4567</td>
+          </tr>
+          <tr>
+            <td>Athlone, Co. Westmeath</td>
+            <td>N92 D65X</td>
+            <td>+085 234 5678</td>
+          </tr>
+          <tr>
+            <td>Mullingar, Co. Westmeath</td>
+            <td>N37 H6K5</td>
+            <td>+085 345 6789</td>
+          </tr>
+        </table> 
       </div>
+      <br><br>
+    
+      <!-- Gallery -->
+      <div style="background-color: white" class="px-lg-5 py-lg-5 py-sm-5" >
+        <div class="row">
+          <div class="col-lg-6 col-md-12 mb-4 mb-lg-0 flex-column">
+            <img
+              src="images/dish1.jpg"
+              class="w-100 shadow-1-strong rounded mb-4"
+              alt="Boat on Calm Water"
+            />
 
-      <div class="col-lg-4 mb-4 mb-lg-0">
-        <img
-          src="images/Dining.jpg"
-          class="w-100 shadow-1-strong rounded mb-4"
-          alt="Mountains in the Clouds"
-        />
+            <img
+              src="images/dish3.jpg"
+              class="w-100 shadow-1-strong rounded mb-4"
+              alt="Boat on Calm Water"
+            />
 
-        <img
-          src="images/dish3.jpg"
-          class="w-100 shadow-1-strong rounded mb-4"
-          alt="Boat on Calm Water"
-        />
+            <img
+              src="images/dish4.webp"
+              class="w-100 shadow-1-strong rounded mb-4"
+              alt="Waves at Sea"
+            />
+          </div>
+
+          <div class="col-lg-6 mb-4 mb-lg-0 flex-column">
+            <img
+              src="images/Dining.jpg"
+              class="w-100 shadow-1-strong rounded mb-4"
+              alt="Mountains in the Clouds"
+            />
+
+            <img
+              src="images/dish2.jpg"
+              class="w-100 shadow-1-strong rounded mb-4"
+              alt="Wintry Mountain Landscape"
+            />
+
+            <img
+              src="images/Dishes.jpg"
+              class="w-100 shadow-1-strong rounded mb-4"
+              alt="Yosemite National Park"
+            />
+          </div>
+        </div>
       </div>
-
-      <div class="col-lg-4 mb-4 mb-lg-0">
-        <img
-          src="images/dish4.webp"
-          class="w-100 shadow-1-strong rounded mb-4"
-          alt="Waves at Sea"
-        />
-
-        <img
-          src="images/Dishes.jpg"
-          class="w-100 shadow-1-strong rounded mb-4"
-          alt="Yosemite National Park"
-        />
       </div>
     </div>
 
