--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -36,7 +36,7 @@
           </ul>
         </div>
       </nav>
-    <hr>
+    <div class="content py-3 px-lg-5 px-md-0">
     <div class="frontpage">
     <h1>Reviews!</h1>
     <p>
@@ -52,6 +52,8 @@
       <h3>Jane Doe</h3>
       <p>"The pizza here is something else. I was greeted with overall very friendly staff and the atmosphere is brilliant. I was surprised that such a popular establishment had affordable pricing and ample room."</p>
     </div>
+    </div>
+    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
