--- a/pages/contact.html
+++ b/pages/contact.html
@@ -35,28 +35,29 @@
           </ul>
         </div>
       </nav>
-    <hr>
-    <div class="frontpage" style="height: 100vh;">
-    <h1>Have a query? Want to leave a review or feedback?</h1>
-    <p>You can fill out the form below for us to receive your feedback.</p>
+    <div class="content py-3 px-lg-5 px-md-0"></div>
+      <div class="frontpage" style="height: 100vh;">
+        <h1>Have a query? Want to leave a review or feedback?</h1>
+        <p>You can fill out the form below for us to receive your feedback.</p>
+        <span class="centered">
+          <form id="formtochange" class="form">
+            <div class="row">
+              <div class="col">
+                <input type="text" class="form-control" placeholder="Name">
+              </div>
+              <div class="col">
+                <input type="text" class="form-control" placeholder="Email">
+              </div>
+            </div>
+            <div class="form-group"><br>
+              <textarea class="form-control" placeholder="We'd love to hear from you." id="textarea" rows="3"></textarea>
+            </div>
+            <button onclick="submitted()" type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </span>
+      </div>
     </div>
-    <span class="centered">
-      <form id="formtochange" class="form">
-        <div class="row">
-          <div class="col">
-            <input type="text" class="form-control" placeholder="Name">
-          </div>
-          <div class="col">
-            <input type="text" class="form-control" placeholder="Email">
-          </div>
-        </div>
-        <div class="form-group"><br>
-          <textarea class="form-control" placeholder="We'd love to hear from you." id="textarea" rows="3"></textarea>
-        </div>
-        <button onclick="submitted()" type="submit" class="btn btn-primary">Submit</button>
-      </form>
-    </span>
-
+  
     <!-- Optional JavaScript -->
     <script>
       function submitted() {
