--- a/pages/menu.html
+++ b/pages/menu.html
@@ -45,14 +45,14 @@
     <section id="menu" class="menu">
 
       <div class="menu-section">
-        <h1 align="center">Antipasti/Starters!</h1>
+        <h1 align="center" class="menu-title">Antipasti/Starters!</h1>
         <div class="container">
           <div class="row">
 
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Bruschetta ai Funghi Restaurant</a><span>€5.95</span>
+                  <a href="#">Bruschetta ai Funghi Restaurant</a><span class="menu-price">€5.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Pizza bread style, topped with chopped tomatoes, garlic, basil & olive oil
@@ -63,7 +63,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Bruschetta al pomodoro</a><span>€6.95</span>
+                  <a href="#">Bruschetta al pomodoro</a><span class="menu-price">€6.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Pizza bread style, topped with chopped tomatoes, garlic, basil & olive oil
@@ -76,7 +76,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Crocchette di patate (Italian croquettes)</a><span>€7.95</span>
+                  <a href="#">Crocchette di patate (Italian croquettes)</a><span class="menu-price">€7.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Riced potatoes, combined with sundried tomato pesto, bacon and mozzarella
@@ -87,7 +87,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Garlic bread Restaurant</a></a><span>€8.95</span>
+                  <a href="#">Garlic bread Restaurant</a></a><span class="menu-price">€8.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Pizza bread style topped with garlic butter
@@ -100,7 +100,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Polpette di Carne (Italian Meatballs)</a><span>€9.95</span>
+                  <a href="#">Polpette di Carne (Italian Meatballs)</a><span class="menu-price">€9.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Homemade meatballs,slow cooked in fresh tomato sauce,served with toasted ciabatta
@@ -111,7 +111,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Burrata salad</a><span>€4.95</span>
+                  <a href="#">Burrata salad</a><span class="menu-price">€4.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Basil pesto, cherry tomatoes on toasted bread, fresh burrata, honey & mixed nuts
@@ -124,7 +124,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Greek Salad</a><span>€9.95</span>
+                  <a href="#">Greek Salad</a><span class="menu-price">€9.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Fresh spinach, crisp romaine, tomatoes, and Greek olives
@@ -135,7 +135,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Spinach Salad</a><span>€9.95</span>
+                  <a href="#">Spinach Salad</a><span class="menu-price">€9.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Fresh spinach with mushrooms, hard boiled egg, and warm bacon vinaigrette
@@ -148,7 +148,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Piadina di Pollo</a><span>€12.95</span>
+                  <a href="#">Piadina di Pollo</a><span class="menu-price">€12.95</span>
                 </div>
                 <div class="menu-ingredients">
                   A thin Italian wrap with red slaw, sweetcorn, crispy bacon & chicken served with a sweet chili
@@ -162,14 +162,14 @@
       </div>
 
       <div class="menu-section">
-        <h1 align="center">Pasta Terra/Meat&Poultry Pasta</h1>
+        <h1 align="center" class="menu-title">Pasta Terra/Meat&Poultry Pasta</h1>
         <div class="container">
           <div class="row">
 
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Penne al Pesto calabrese Restaurant</a><span>€16.95</span>
+                  <a href="#">Penne al Pesto calabrese Restaurant</a><span class="menu-price">€16.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Diced chicken, spring onion, broccoli & mix chilli in a red & green pesto cream sauce
@@ -180,7 +180,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Linguine alla Carbonara Restaurant</a><span>€15.95</span>
+                  <a href="#">Linguine alla Carbonara Restaurant</a><span class="menu-price">€15.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Pan fried smoked bacon ,egg yolk, parmesan cream sauce
@@ -193,7 +193,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Tagliatelle Tommaso Restaurant</a><span>€14.95</span>
+                  <a href="#">Tagliatelle Tommaso Restaurant</a><span class="menu-price">€14.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Chicken and mushrooms in a parmesan cream sauce
@@ -204,7 +204,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Linguine alla Bolognese Restaurant</a></a><span>€17.95</span>
+                  <a href="#">Linguine alla Bolognese Restaurant</a></a><span class="menu-price">€17.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Homemade traditional Bolognese sauce
@@ -217,7 +217,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Penne all'arrabbiata Restaurant</a><span>€15.95</span>
+                  <a href="#">Penne all'arrabbiata Restaurant</a><span class="menu-price">€15.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Penne pasta with fresh red and green chillies in tomato sauce
@@ -228,7 +228,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Risotto con funghi e burrata Restaurant</a><span>€15.95</span>
+                  <a href="#">Risotto con funghi e burrata Restaurant</a><span class="menu-price">€15.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Cannoli rice, wild mushroom, spinach in creamy and parmesan sauce
@@ -241,7 +241,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Lasagne Restaurant</a><span>€14.95</span>
+                  <a href="#">Lasagne Restaurant</a><span class="menu-price">€14.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Traditional homemade lasagne, served with chips
@@ -253,15 +253,15 @@
         </div>
       </div>
 
-      <div class="menu-section" style="margin-bottom: 0px;">
-        <h1 align="center">La Pizza - Rossa</h1>
+      <div class="menu-section" style="margin-bottom: 0px; padding-bottom: 230px;">
+        <h1 align="center" class="menu-title">La Pizza - Rossa</h1>
         <div class="container">
           <div class="row">
 
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Margherita Restaurant</a><span>€16.95</span>
+                  <a href="#">Margherita Restaurant</a><span class="menu-price">€16.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Tomato sauce and mozzarella cheese. Also available with Buffalo Mozzarella (+€2,00)
@@ -272,7 +272,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Pepperoni Restaurant</a><span>€15.95</span>
+                  <a href="#">Pepperoni Restaurant</a><span class="menu-price">€15.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Tomato sauce, mozzarella, pepperoni
@@ -285,7 +285,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Isabella Restaurant</a><span>€14.95</span>
+                  <a href="#">Isabella Restaurant</a><span class="menu-price">€14.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Tomato sauce, mozzarella, ham and mushrooms
@@ -296,7 +296,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Diavola Restaurant</a></a><span>€17.95</span>
+                  <a href="#">Diavola Restaurant</a></a><span class="menu-price">€17.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Tomato sauce, mozzarella, spicy salame, red onion & nduja
@@ -309,7 +309,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Toscana Restaurant</a><span>€15.95</span>
+                  <a href="#">Toscana Restaurant</a><span class="menu-price">€15.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Tomato sauce, fior di latte, portobello mushrooms, Italian sausage, rosemary
@@ -320,7 +320,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Rucola Parma Emiliana Restaurant</a><span>€15.95</span>
+                  <a href="#">Rucola Parma Emiliana Restaurant</a><span class="menu-price">€15.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Tomato sauce, mozzarella, rocket leaves, parma ham & parmesan
@@ -333,7 +333,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Hawaiian Restaurant</a><span>€14.95</span>
+                  <a href="#">Hawaiian Restaurant</a><span class="menu-price">€14.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Tomato sauce, mozzarella, pineapple and cooked ham
