--- a/pages/contact.html
+++ b/pages/contact.html
@@ -61,7 +61,7 @@
     <!-- Optional JavaScript -->
     <script>
       function submitted() {
-        document.getElementById("formtochange").innerHTML="<br><br><h1 style= text-align:center; >Thank you for your feedback.</h1><br><h1 style=text-align:center;>We look forward to hearing from you.</h1>";
+        document.getElementById("formtochange").innerHTML="<p style= text-align:center; >Thank you for your feedback.<br>We look forward to hearing from you.</p>";
       } 
       </script> 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
