--- a/pages/contact.html
+++ b/pages/contact.html
@@ -38,7 +38,7 @@
     <div class="content py-3 px-lg-5 px-md-0"></div>
       <div class="frontpage" style="height: 100vh;">
         <h1>Have a query? Want to leave a review or feedback?</h1>
-        <p>You can fill out the form below for us to receive your feedback.</p>
+        <p style="font-weight: 100;">You can fill out the form below for us to receive your feedback.</p>
         <span class="centered">
           <form id="formtochange" class="form">
             <div class="row">
