--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -39,7 +39,7 @@
     <div class="content py-3 px-lg-5 px-md-0">
     <div class="frontpage">
     <h1>Reviews!</h1>
-    <p>
+    <p style="font-weight: 100;">
       As a restaurant in Galway, we understand there is many places you can dine. Why don't you listen to some of our customers who will show you why La Collina is the place to eat tonight!<br><br>
     </p>
     </div>
