--- a/pages/menu.html
+++ b/pages/menu.html
@@ -52,7 +52,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Bruschetta ai Funghi Restaurant</a><span class="menu-price">€5.95</span>
+                  <a href="https://en.wikipedia.org/wiki/Bruschetta">Bruschetta ai Funghi Restaurant</a><span class="menu-price">€5.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Pizza bread style, topped with chopped tomatoes, garlic, basil & olive oil
