--- a/pages/menu.html
+++ b/pages/menu.html
@@ -63,7 +63,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Bruschetta al pomodoro</a><span class="menu-price">€6.95</span>
+                  <a href="https://www.insidetherustickitchen.com/bruschetta-al-pomodoro/">Bruschetta al pomodoro</a><span class="menu-price">€6.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Pizza bread style, topped with chopped tomatoes, garlic, basil & olive oil
@@ -76,7 +76,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Crocchette di patate (Italian croquettes)</a><span class="menu-price">€7.95</span>
+                  <a href="https://thekittchen.com/italian-croquettes/">Crocchette di patate (Italian croquettes)</a><span class="menu-price">€7.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Riced potatoes, combined with sundried tomato pesto, bacon and mozzarella
@@ -87,7 +87,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Garlic bread Restaurant</a></a><span class="menu-price">€8.95</span>
+                  <a href="https://en.wikipedia.org/wiki/Garlic_bread">Garlic bread Restaurant</a></a><span class="menu-price">€8.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Pizza bread style topped with garlic butter
@@ -100,7 +100,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Polpette di Carne (Italian Meatballs)</a><span class="menu-price">€9.95</span>
+                  <a href="https://www.recipetineats.com/classic-italian-meatballs-extra-soft-and-juicy/">Polpette di Carne (Italian Meatballs)</a><span class="menu-price">€9.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Homemade meatballs,slow cooked in fresh tomato sauce,served with toasted ciabatta
@@ -111,7 +111,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Burrata salad</a><span class="menu-price">€4.95</span>
+                  <a href="https://www.recipetineats.com/tomato-burrata-salad/">Burrata salad</a><span class="menu-price">€4.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Basil pesto, cherry tomatoes on toasted bread, fresh burrata, honey & mixed nuts
@@ -124,7 +124,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Greek Salad</a><span class="menu-price">€9.95</span>
+                  <a href="https://en.wikipedia.org/wiki/Greek_salad">Greek Salad</a><span class="menu-price">€9.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Fresh spinach, crisp romaine, tomatoes, and Greek olives
@@ -135,7 +135,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Spinach Salad</a><span class="menu-price">€9.95</span>
+                  <a href="https://en.wikipedia.org/wiki/Spinach_salad">Spinach Salad</a><span class="menu-price">€9.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Fresh spinach with mushrooms, hard boiled egg, and warm bacon vinaigrette
@@ -148,7 +148,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Piadina di Pollo</a><span class="menu-price">€12.95</span>
+                  <a href="https://blog.giallozafferano.it/dulcisinforno/wrap-pollo/">Piadina di Pollo</a><span class="menu-price">€12.95</span>
                 </div>
                 <div class="menu-ingredients">
                   A thin Italian wrap with red slaw, sweetcorn, crispy bacon & chicken served with a sweet chili
@@ -169,7 +169,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Penne al Pesto calabrese Restaurant</a><span class="menu-price">€16.95</span>
+                  <a href="https://blog.giallozafferano.it/cucinadichicca/penne-al-pesto-calabrese/">Penne al Pesto calabrese Restaurant</a><span class="menu-price">€16.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Diced chicken, spring onion, broccoli & mix chilli in a red & green pesto cream sauce
@@ -180,7 +180,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Linguine alla Carbonara Restaurant</a><span class="menu-price">€15.95</span>
+                  <a href="https://en.wikipedia.org/wiki/Carbonara#:~:text=Carbonara%20(Italian%3A%20%5Bkarbo%CB%88na%CB%90ra%5D,middle%20of%20the%2020th%20century.&text=The%20cheese%20is%20usually%20pecorino%20romano.">Linguine alla Carbonara Restaurant</a><span class="menu-price">€15.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Pan fried smoked bacon ,egg yolk, parmesan cream sauce
@@ -193,7 +193,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Tagliatelle Tommaso Restaurant</a><span class="menu-price">€14.95</span>
+                  <a href="https://www.jamieoliver.com/recipes/pasta-recipes/easy-peasy-tomato-tagliatelle-with-asparagus/">Tagliatelle Tommaso Restaurant</a><span class="menu-price">€14.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Chicken and mushrooms in a parmesan cream sauce
@@ -204,7 +204,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Linguine alla Bolognese Restaurant</a></a><span class="menu-price">€17.95</span>
+                  <a href="https://en.wikipedia.org/wiki/Bolognese_sauce">Linguine alla Bolognese Restaurant</a></a><span class="menu-price">€17.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Homemade traditional Bolognese sauce
@@ -217,7 +217,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Penne all'arrabbiata Restaurant</a><span class="menu-price">€15.95</span>
+                  <a href="https://www.recipetineats.com/penne-all-arrabbiata-spicy-tomato-pasta/">Penne all'arrabbiata Restaurant</a><span class="menu-price">€15.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Penne pasta with fresh red and green chillies in tomato sauce
@@ -228,7 +228,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Risotto con funghi e burrata Restaurant</a><span class="menu-price">€15.95</span>
+                  <a href="https://ricette.giallozafferano.it/Risotto-ai-funghi.html">Risotto con funghi e burrata Restaurant</a><span class="menu-price">€15.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Cannoli rice, wild mushroom, spinach in creamy and parmesan sauce
@@ -241,7 +241,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Lasagne Restaurant</a><span class="menu-price">€14.95</span>
+                  <a href="https://en.wikipedia.org/wiki/Lasagna">Lasagne Restaurant</a><span class="menu-price">€14.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Traditional homemade lasagne, served with chips
@@ -261,7 +261,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Margherita Restaurant</a><span class="menu-price">€16.95</span>
+                  <a href="https://en.wikipedia.org/wiki/Pizza_Margherita">Margherita Restaurant</a><span class="menu-price">€16.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Tomato sauce and mozzarella cheese. Also available with Buffalo Mozzarella (+€2,00)
@@ -272,7 +272,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Pepperoni Restaurant</a><span class="menu-price">€15.95</span>
+                  <a href="https://pizza.fandom.com/wiki/Pepperoni">Pepperoni Restaurant</a><span class="menu-price">€15.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Tomato sauce, mozzarella, pepperoni
@@ -296,7 +296,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Diavola Restaurant</a></a><span class="menu-price">€17.95</span>
+                  <a href="https://www.tasteatlas.com/diavola">Diavola Restaurant</a></a><span class="menu-price">€17.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Tomato sauce, mozzarella, spicy salame, red onion & nduja
@@ -309,7 +309,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Toscana Restaurant</a><span class="menu-price">€15.95</span>
+                  <a href="https://pastadipiazzaitaliana.co.uk/pastadipiazzaitaliana.co.uk/menu-item/toscana-pizza/#:~:text=Tomato%2C%20cheese%2C%20mushrooms%2C%20diced,in%20our%20clay%20pizza%20oven.">Toscana Restaurant</a><span class="menu-price">€15.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Tomato sauce, fior di latte, portobello mushrooms, Italian sausage, rosemary
@@ -333,7 +333,7 @@
             <div class="col-md">
               <div class="menu-item">
                 <div class="menu-content">
-                  <a href="#">Hawaiian Restaurant</a><span class="menu-price">€14.95</span>
+                  <a href="https://sallysbakingaddiction.com/hawaiian-pizza/">Hawaiian Restaurant</a><span class="menu-price">€14.95</span>
                 </div>
                 <div class="menu-ingredients">
                   Tomato sauce, mozzarella, pineapple and cooked ham
